--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,7 @@
 
 body {
   font-family: 'Montserrat Alternates';
-  background-image: url(../img/shelves.jpg);
-  background-size: no-repeat;
-
-
+font-size: 16px;
 
 }
 
