--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,15 @@ font-size: 16px;
 }
 .navbar-default .navbar-brand {
   color: #ffffff;
+  font-size: 30px;
+  letter-spacing: 3px;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
   color: #050505;
 }
 .navbar-default .navbar-text {
-  color: #ffffff;
+
 }
 .navbar-default .navbar-nav > li > a {
   color: #ffffff;
