--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ font-size: 16px;
     #thumbnail-preview-indicators .slides .slide-2,
     #thumbnail-preview-indicators .slides .slide-3 {
       height: 680px;
-      width: 1903px;
+      //*width: 1903px;*//
     }
 #thumbnail-preview-indicators .slides .slide-1 {
   background-image: url(../img/grass.jpg);
