--- a/css/about.css
+++ b/css/about.css
@@ -117,7 +117,7 @@ body {
     color: #212121;
     text-align: left;
 	background-color: #263238;
-	background-image: url(https://daks2k3a4ib2z.cloudfront.net/58c8155ffb3921d4300051e2/59928418f97d37000113ca3c_DCA_Logo_Light_Grey.pngs);
+	background-image: url(https://daks2k3a4ib2z.cloudfront.net/58c8155ffb3921d4300051e2/59928418f97d37000113ca3c_DCA_Logo_Light_Grey.png);
     background-size: 50%;
     background-repeat: no-repeat;
     background-position: center center;
